<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.RegisterActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/iconRegist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/instagram_text" />

    <TextView
        android:id="@+id/tvRegist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/register_description"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/iconRegist"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/iconRegist"
        app:layout_constraintTop_toBottomOf="@+id/iconRegist" />

    <com.dicoding.storysub.customview.CVName
        android:id="@+id/RegistName"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/name"
        android:textSize="13sp"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="@+id/tvRegist"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/tvRegist"
        app:layout_constraintTop_toBottomOf="@+id/tvRegist" />

    <com.dicoding.storysub.customview.CVEmail
        android:id="@+id/RegistEmail"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        android:minHeight="48dp"
        android:textSize="13sp"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="@+id/tvRegist"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/tvRegist"
        app:layout_constraintTop_toBottomOf="@+id/RegistName" />

    <com.dicoding.storysub.customview.CVPassword
        android:id="@+id/RegistPassword"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:minHeight="48dp"
        android:textSize="13sp"
        android:background="@drawable/border"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/tvRegist"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/tvRegist"
        app:layout_constraintTop_toBottomOf="@+id/RegistEmail" />

    <CheckBox
        android:id="@+id/seeRegistPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_light"
        android:minHeight="48dp"
        android:text="@string/visible_password"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/RegistPassword"
        app:layout_constraintTop_toBottomOf="@+id/RegistPassword" />

    <Button
        android:id="@+id/btnRegistAccount"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_button"
        android:fontFamily="@font/roboto_bold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:text="@string/register_button"
        app:layout_constraintEnd_toEndOf="@+id/tvRegist"
        app:layout_constraintStart_toStartOf="@+id/tvRegist"
        app:layout_constraintTop_toBottomOf="@+id/seeRegistPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>