<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.AddActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="invisible" />

        <Button
            android:id="@+id/btnPostStory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/border_button"
            android:text="@string/button_post_story"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/tv_des"
            app:layout_constraintStart_toStartOf="@+id/tv_des"
            app:layout_constraintTop_toBottomOf="@+id/tv_des" />

        <TextView
            android:id="@+id/tvUsers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_bold"
            android:textSize="20sp"
            android:text="@string/detail_story_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageStoryUpload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="@+id/tvUsers"
            app:layout_constraintStart_toStartOf="@+id/tvUsers"
            app:layout_constraintTop_toBottomOf="@+id/tvUsers"
            app:srcCompat="@drawable/logostoryapp" />

        <Button
            android:id="@+id/cameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/border_button"
            android:text="@string/button_camera"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/galleryButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/imageStoryUpload"
            app:layout_constraintTop_toBottomOf="@+id/imageStoryUpload" />

        <Button
            android:id="@+id/galleryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/border_button"
            android:text="@string/button_gallery"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/imageStoryUpload"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cameraButton"
            app:layout_constraintTop_toBottomOf="@+id/imageStoryUpload" />

        <EditText
            android:id="@+id/tv_des"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginTop="32dp"
            android:autofillHints="Description"
            android:background="@drawable/border"
            android:gravity="top|left"
            android:hint="@string/story_description"
            android:inputType="textMultiLine"
            android:maxHeight="180dp"
            android:maxLines="8"
            android:padding="15dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/imageStoryUpload"
            app:layout_constraintStart_toStartOf="@+id/imageStoryUpload"
            app:layout_constraintTop_toBottomOf="@+id/cameraButton"
            tools:ignore="RtlHardcoded" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>