<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/iconLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:src="@drawable/instagram_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLoginDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:alpha="0"
        android:text="@string/login_description"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/iconLogin"
        app:layout_constraintStart_toStartOf="@+id/iconLogin"
        app:layout_constraintTop_toBottomOf="@+id/iconLogin"
        tools:alpha="1" />

    <com.dicoding.storysub.customview.CVEmail
        android:id="@+id/CVEmail"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/border"
        android:fontFamily="@font/roboto_medium"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/grey"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/tvLoginDescription"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/tvLoginDescription"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginDescription"
        tools:alpha="1" />

    <com.dicoding.storysub.customview.CVPassword
        android:id="@+id/PasswordLogin"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:inputType="textPassword"
        android:background="@drawable/border"
        android:fontFamily="@font/roboto_medium"
        android:textColorHint="@color/grey"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/tvLoginDescription"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/tvLoginDescription"
        app:layout_constraintTop_toBottomOf="@+id/CVEmail"
        tools:alpha="1" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/border_button"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/login_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/PasswordLogin"
        app:layout_constraintStart_toStartOf="@+id/PasswordLogin"
        app:layout_constraintTop_toBottomOf="@+id/seePassword" />

    <TextView
        android:id="@+id/tvRegistDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        android:fontFamily="@font/roboto_light"
        android:text="@string/text_register"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        tools:alpha="1" />

    <CheckBox
        android:id="@+id/seePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:fontFamily="@font/roboto_light"
        android:minHeight="48dp"
        android:text="@string/visible_password"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/PasswordLogin"
        app:layout_constraintTop_toBottomOf="@+id/PasswordLogin"
        tools:alpha="1" />

    <TextView
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:alpha="0"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/register_button"
        android:textColor="@color/blue"
        app:layout_constraintStart_toEndOf="@+id/tvRegistDescription"
        app:layout_constraintTop_toTopOf="@+id/tvRegistDescription"
        tools:alpha="1" />

</androidx.constraintlayout.widget.ConstraintLayout>